Ensure proper alignment of long and short current menu entries alike.

--- a/css/style.css
+++ b/css/style.css
@@ -275,12 +275,13 @@ span.arrow {
 #main-nav li.current
 {
 	top: .5rem;
-	left: 0;
+	left: 7%;
 	margin-left: 0;
 	margin-top: 0;
 	position: fixed;
-	height: 1rem;
 	background: none;
+	width: auto;
+	text-align: left;
 }
 
 #manual_menu li a,
